<resources>
    <string name="app_name">MDS</string>
    <string name="textview_description">Description</string>
    <string name="textview_title">Title</string>
    <string name="search_menu">Search</string>
    <string name="logout_menu">Logout</string>
    <string name="sorting_menu">Sorting</string>
    <string name="button_save">Save</string>
    <string name="button_share">Share</string>
    <string name="button_wallpaper">Wall</string>
    <string name="add_post">Add Post</string>
    <string name="button_upload">Upload</string>
    <string name="add_description">Enter description</string>
    <string name="add_title">Enter road name</string>
    <string name="rename_button_upload">Update</string>
    <string name="directional_signs">Directional Signs</string>
    <string name="billboards">Billboards</string>
    <string name="street_poles">Street Poles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
