<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/search_menu"
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:title="@string/sorting_menu"
        android:id="@+id/menu_sorting"
        app:showAsAction="never"
        />
    <item
        android:title="@string/logout_menu"
        android:id="@+id/menu_logout"
        app:showAsAction="never"
        />

    <item
        android:title="@string/add_post"
        android:id="@+id/add_post"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_add"
        />


</menu>