<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="#fff"
    app:contentPadding="5dp"
    app:cardCornerRadius="3dp"
    app:cardUseCompatPadding="true"
    tools:context=".ImageDetailsActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/textViewTitleDetails"
            android:text="@string/textview_title"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textStyle="bold"
            />

        <ImageView
            android:id="@+id/imageViewRowDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:background="@drawable/loadingimage"
            />

        <TextView
            android:id="@+id/textViewDescriptionDetails"
            android:text="@string/textview_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                android:drawableLeft="@drawable/ic_action_save"
                android:layout_weight="1"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:theme="@style/BlueButtonLightTheme"
                />
            <Button
                android:id="@+id/buttonShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_share"
                android:drawableLeft="@drawable/ic_action_share"
                android:layout_weight="1"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:theme="@style/BlueButtonLightTheme"
                />
            <Button
                android:id="@+id/buttonWall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_wallpaper"
                android:drawableLeft="@drawable/ic_action_wall"
                android:layout_weight="1"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:theme="@style/BlueButtonLightTheme"
                />

        </LinearLayout>

    </LinearLayout>



</android.support.v7.widget.CardView>