<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageAddActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_title"
            android:singleLine="true"
            android:id="@+id/addTitle"
            android:background="@drawable/edittextstyles"
            android:padding="10dp"
            />
        <ImageView
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/attach_image"
            android:background="@color/colorPrimaryDark"
            />
        <EditText
            android:id="@+id/addDescription"
            android:padding="10dp"
            android:background="@drawable/edittextstyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_description"
            android:minHeight="100dp"
            android:gravity="top"
            />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_upload"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_gravity="end"
            />
    </LinearLayout>


</ScrollView>