<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ImageAddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <EditText
            android:id="@+id/addTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextstyles"
            android:hint="@string/add_title"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true" />
        <ImageView
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/attach_image"
            android:background="@color/colorPrimaryDark"
            />
        <EditText
            android:id="@+id/addDescription"
            android:padding="10dp"
            android:background="@drawable/edittextstyles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_description"
            android:minHeight="100dp"
            android:gravity="top"
            />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_upload"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:layout_gravity="end"
            />
    </LinearLayout>

</ScrollView>